# private-data-objects

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILD.md  CONTRIBUTORS.md  LICENSE  MAINTAINERS.md  PREREQUISITES.md  README.md  Required_Changes.md  SPECIFICATION.md  USAGE.md  VERSION  enable-dco.txt
ccf_transaction_processor/: CMakeLists.txt  Makefile  README.md  Readme.md
ccf_transaction_processor/etc/: cchost.toml  cchost_join.toml  constitution.js  oe_sign.conf
ccf_transaction_processor/generate_signing_keys/: gen_keys.sh  get_verifying_keys.sh  key_gen.py  key_read.py
ccf_transaction_processor/scripts/: add_node_to_ccf_network.sh  configure_ccf_network.py  fetch_ledger_authority.py  generate_ledger_authority.py  get_quote_and_verify_mrenclave.py  ping_test.py  register_enclave_attestation_verification_policy.py  register_enclave_expected_measurements.py  start_ccf_network.sh  start_cchost.sh  stop_cchost.sh  utils.py
ccf_transaction_processor/test/: ping_test.py  test.sh
ccf_transaction_processor/transaction_processor/: ccl_registry.h  contract_registry.h  enclave_registry.h  pdo_tp.cpp  pdo_tp.h  verify_signatures.cpp
common/: BUILD.md  CMakeLists.txt  CMakeVariables.txt  README.md  c11_support.cpp  c11_support.h  error.cpp  error.h  hex_string.cpp  hex_string.h  jsonvalue.h  log.cpp  log.h  pdo_error.h  sgx_support.h  timer.h  types.cpp  types.h  zero.h
common/cdi/: contract_compilation_report.cpp  contract_compilation_report.h
common/cmake/: CommonVariables.cmake
common/crypto/: CMakeLists.txt  crypto.h  crypto_shared.h  crypto_utils.cpp  crypto_utils.h  hash.cpp  hash.h  pkenc.h  pkenc_private_key.cpp  pkenc_private_key.h  pkenc_public_key.cpp  pkenc_public_key.h  sgx_defaults.h  sig.cpp  sig.h  sig_private_key.cpp  sig_private_key.h  sig_public_key.cpp  sig_public_key.h  skenc.cpp  skenc.h
common/crypto/attestation-api/: CMakeLists.txt  CMakeVariables.txt  Makefile  README.md  usage.md
common/crypto/verify_ias_report/: .gitignore  build_ias_certificates_cpp.sh  fetch_ias_certificates.sh  ias-certificates.cpp  ias-certificates.h  ias-certificates.h.in  verify-report.cpp  verify-report.h
common/interpreter/: CMakeLists.txt  ContractCode.cpp  ContractCode.h  ContractInterpreter.h  ContractMessage.cpp  ContractMessage.h  ContractState.cpp  ContractState.h  CppProcessor.cpp  CppProcessor.h  InvocationHelpers.cpp  InvocationHelpers.h  invocation.json
common/interpreter/cpp_processor/: CMakeLists.txt  ContractDispatcher.cpp  CppProcessor.cpp  CppProcessor.h  CppProcessorHandler.cpp  CppProcessorHandler.h  IntKeyCppContractExecuter.cpp
common/interpreter/gipsy_scheme/: CMakeLists.txt  GipsyInterpreter.cpp  GipsyInterpreter.h  SchemeExtensions.cpp  SchemeExtensions.h  safe_malloc.cpp  safe_malloc.h
common/interpreter/intkey_cpp_contract_test/: CMakeLists.txt.tmp  IntKeyCppContractExecuter.cpp  IntKeyCppContractExecuter.h  IntKeyCppContractWrapper.cpp  IntKeyCppContractWrapper.h
common/interpreter/wawaka_wasm/: CMakeLists.txt  README.md  WasmCryptoExtensions.cpp  WasmCryptoExtensions.h  WasmExtensions.cpp  WasmExtensions.h  WasmStateExtensions.cpp  WasmStateExtensions.h  WasmUtil.cpp  WasmUtil.h  WawakaInterpreter.cpp  WawakaInterpreter.h  wamr_fixes.c
common/state/: README.md  StateBlock.cpp  StateBlock.h  StateBlockList.cpp  StateBlockList.h  StateUtils.cpp  StateUtils.h  basic_kv.h  biox.cpp  biox.h  blix.cpp  blix.h  block_offset.cpp  block_offset.h  block_warehouse.cpp  block_warehouse.h  cache.cpp  cache.h  data_node.cpp  data_node.h  data_node_io.cpp  data_node_io.h  free_space_collector.cpp  free_space_collector.h  interpreter_kv.cpp  interpreter_kv.h  sal.cpp  sal.h  sebio.cpp  sebio.h  serial_kv.cpp  serial_kv.h  state.h  state_kv.cpp  state_kv.h  state_log.h  state_status.h  trie.cpp  trie.h
common/tests/: CMakeLists.txt  testCrypto.cpp  testCrypto.h  test_cryptoWrapper.py
common/tests/crypto/: CMakeLists.txt  testCrypto.cpp  testCrypto.h  test_cryptoWrapper.py  test_shared.h  test_sig.cpp
common/tests/state/: CMakeLists.txt
common/tests/trusted/: Makefile
common/tests/untrusted/: TestUntrusted.cpp
contracts/cdi/: CMakeLists.txt  GenCDIReport.cpp  Makefile
contracts/wawaka/: .gitignore  CMakeLists.txt  Makefile  contract-build.cmake  wawaka_common.cmake
contracts/wawaka/attestation-test/: CMakeLists.txt  attestation-test.cpp
contracts/wawaka/benchmarks/: CMakeLists.txt  Makefile  README.md
contracts/wawaka/common/: Attestation.cpp  Attestation.h  Cryptography.cpp  Cryptography.h  Dispatch.cpp  Dispatch.h  Environment.cpp  Environment.h  KeyValue.cpp  KeyValue.h  Message.cpp  Message.h  Response.cpp  Response.h  Secret.cpp  Secret.h  StateReference.cpp  StateReference.h  StringArray.cpp  StringArray.h  Types.cpp  Types.h  Util.cpp  Util.h  Value.cpp  Value.h
contracts/wawaka/exchange/: CMakeLists.txt
contracts/wawaka/fibonacci/: fibonacci.cpp  test-short.json
contracts/wawaka/interface-test/: CMakeLists.txt  interface-test.cpp  test-short.json
contracts/wawaka/interpreter-test/: CMakeLists.txt  interpreter-test.cpp  test-short.json
contracts/wawaka/kv-test/: CMakeLists.txt  (+2 more)
eservice/: CMakeLists.txt  MANIFEST  MANIFEST.in  Makefile  register_with_ledger.sh  setup.py  setup_contract_enclave_info.sh
eservice/docs/: BUILD.md  REQUIREMENTS.md  basetypes.json  contract.json  database.md  eservice.json  eservice.md  sservice.md  test-scripts.md
eservice/etc/: sample_eservice.toml  sample_sservice.toml
eservice/tests/: test-contract-intkey.py  test-contract.py  test-request-intkey.py  test-request.py  test-secrets.py
pservice/: .gitignore  CMakeLists.txt  Makefile  setup.py
pservice/docs/: BUILD.md  pservice.json
pservice/etc/: sample_pservice.toml  test_ps_priv.pem  test_ps_pub.pem
pservice/scripts/: pservice
pservice/test/: UnitTests.py  Unit_Tests.md
python/: BUILD.md  CMakeLists.txt  MANIFEST  Makefile  setup.py
python/swig/: CMakeLists.txt
sservice/: CMakeLists.txt  MANIFEST  Makefile  setup.py
sservice/docs/: sservice.md
sservice/etc/: sample_sservice.toml
(+829 files in other folders)
